Solid Version. Fonts Updated, Alignments Fixed, Adding Yield Section Next

--- a/public/css/tailwind/tailwind.css
+++ b/public/css/tailwind/tailwind.css
@@ -588,6 +588,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: auto;
 }
 
+.mx-10 {
+  margin-left: 2.5rem;
+  margin-right: 2.5rem;
+}
+
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
@@ -598,19 +603,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 1rem;
 }
 
-.mx-10 {
-  margin-left: 2.5rem;
-  margin-right: 2.5rem;
-}
-
 .my-6 {
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
-}
-
-.my-40 {
-  margin-top: 10rem;
-  margin-bottom: 10rem;
 }
 
 .mr-12 {
@@ -649,6 +644,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-bottom: 0.5rem;
 }
 
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
 .mb-6 {
   margin-bottom: 1.5rem;
 }
@@ -661,20 +660,16 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 5rem;
 }
 
-.mt-2 {
-  margin-top: 0.5rem;
-}
-
 .-mb-20 {
   margin-bottom: -5rem;
 }
 
-.-mb-14 {
-  margin-bottom: -3.5rem;
+.-mt-4 {
+  margin-top: -1rem;
 }
 
-.mt-4 {
-  margin-top: 1rem;
+.-mt-6 {
+  margin-top: -1.5rem;
 }
 
 .mt-6 {
@@ -685,6 +680,10 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-right: 1rem;
 }
 
+.ml-2 {
+  margin-left: 0.5rem;
+}
+
 .mb-5 {
   margin-bottom: 1.25rem;
 }
@@ -693,12 +692,12 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-left: 1rem;
 }
 
-.mb-3 {
-  margin-bottom: 0.75rem;
-}
-
 .ml-6 {
   margin-left: 1.5rem;
+}
+
+.mt-4 {
+  margin-top: 1rem;
 }
 
 .mb-14 {
@@ -935,6 +934,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   border-bottom-width: 1px;
 }
 
+.border-indigo-600 {
+  --tw-border-opacity: 1;
+  border-color: rgb(95 73 230 / var(--tw-border-opacity));
+}
+
 .border-transparent {
   border-color: transparent;
 }
@@ -952,11 +956,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .border-indigo-900 {
   --tw-border-opacity: 1;
   border-color: rgb(51 40 125 / var(--tw-border-opacity));
-}
-
-.border-indigo-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(95 73 230 / var(--tw-border-opacity));
 }
 
 .bg-darkCoolGray-900 {
@@ -1035,6 +1034,11 @@ Ensure the default browser behavior of the `hidden` attribute.
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
 }
 
+.from-indigo-600 {
+  --tw-gradient-from: #5F49E6;
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(95 73 230 / 0));
+}
+
 .from-indigo-900 {
   --tw-gradient-from: #33287D;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(51 40 125 / 0));
@@ -1053,11 +1057,6 @@ Ensure the default browser behavior of the `hidden` attribute.
 .from-\[\#292847\] {
   --tw-gradient-from: #292847;
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(41 40 71 / 0));
-}
-
-.from-indigo-600 {
-  --tw-gradient-from: #5F49E6;
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to, rgb(95 73 230 / 0));
 }
 
 .from-\[\#2a2a33\] {
@@ -1175,16 +1174,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-right: 0.5rem;
 }
 
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-24 {
-  padding-top: 6rem;
-  padding-bottom: 6rem;
-}
-
 .py-10 {
   padding-top: 2.5rem;
   padding-bottom: 2.5rem;
@@ -1195,9 +1184,9 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 4rem;
 }
 
-.px-6 {
-  padding-left: 1.5rem;
-  padding-right: 1.5rem;
+.py-24 {
+  padding-top: 6rem;
+  padding-bottom: 6rem;
 }
 
 .py-20 {
@@ -1205,20 +1194,32 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-bottom: 5rem;
 }
 
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+
+.py-40 {
+  padding-top: 10rem;
+  padding-bottom: 10rem;
+}
+
+.px-3 {
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+
+.px-5 {
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+}
+
 .pt-6 {
   padding-top: 1.5rem;
 }
 
-.pt-2 {
-  padding-top: 0.5rem;
-}
-
-.pt-20 {
-  padding-top: 5rem;
-}
-
-.pt-16 {
-  padding-top: 4rem;
+.pt-24 {
+  padding-top: 6rem;
 }
 
 .pb-2 {
@@ -1227,6 +1228,14 @@ Ensure the default browser behavior of the `hidden` attribute.
 
 .pb-14 {
   padding-bottom: 3.5rem;
+}
+
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+.pt-20 {
+  padding-top: 5rem;
 }
 
 .pt-4 {
@@ -1250,11 +1259,11 @@ Ensure the default browser behavior of the `hidden` attribute.
 }
 
 .font-body {
-  font-family: "Poppins", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-family: "Exo 2", Roboto, BlinkMacSystemFont, "Segoe UI", , "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
-.text-xl {
-  font-size: 1.25rem;
+.text-lg {
+  font-size: 1.125rem;
 }
 
 .text-3xl {
@@ -1265,20 +1274,20 @@ Ensure the default browser behavior of the `hidden` attribute.
   font-size: 3rem;
 }
 
-.text-lg {
-  font-size: 1.125rem;
-}
-
 .text-base {
   font-size: 1rem;
 }
 
-.text-4xl {
-  font-size: 2.25rem;
+.text-xl {
+  font-size: 1.25rem;
 }
 
 .text-2xl {
   font-size: 1.5rem;
+}
+
+.text-4xl {
+  font-size: 2.25rem;
 }
 
 .text-sm {
@@ -1771,10 +1780,6 @@ body {
   font-size: .625rem;
 }
 
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
-
-@import url("https://fonts.googleapis.com/css?family=Poppins|Roboto");
-
 * {
   border:  0 solid #e5e7eb;
   box-sizing:  border-box;
@@ -1834,6 +1839,7 @@ body {
 body {
   line-height: inherit;
   margin: 0;
+  font-family: "orbitron";
 }
 
 .ii {
@@ -2597,12 +2603,6 @@ small {
   opacity: 0.3;
 }
 
-@font-face {
-  font-family: minecraft;
-
-  src: url("../../fonts/minecraft.ttf");
-}
-
 .flip-horizontal {
   --transform-scale-x: -1;
 }
@@ -2611,6 +2611,10 @@ small {
 
 .flip-vertical {
   --transform-scale-y: -1;
+}
+
+.orbitron {
+  font-family: 'Orbitron', sans-serif;
 }
 
 .hover\:border-indigo-200:hover {
@@ -2803,6 +2807,14 @@ small {
     width: auto;
   }
 
+  .md\:w-11\/12 {
+    width: 91.666667%;
+  }
+
+  .md\:w-1\/4 {
+    width: 25%;
+  }
+
   .md\:w-4\/5 {
     width: 80%;
   }
@@ -2817,22 +2829,6 @@ small {
 
   .md\:w-4\/6 {
     width: 66.666667%;
-  }
-
-  .md\:w-1\/4 {
-    width: 25%;
-  }
-
-  .md\:w-11\/12 {
-    width: 91.666667%;
-  }
-
-  .md\:w-3\/4 {
-    width: 75%;
-  }
-
-  .md\:w-full {
-    width: 100%;
   }
 
   .md\:w-1\/3 {
@@ -2857,11 +2853,6 @@ small {
 
   .md\:items-center {
     align-items: center;
-  }
-
-  .md\:py-0 {
-    padding-top: 0px;
-    padding-bottom: 0px;
   }
 
   .md\:px-8 {
@@ -2998,3 +2989,4 @@ small {
     padding-bottom: 2.5rem;
   }
 }
+
